# backend/docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /
 definitions:
+  TenderHandlers.UpdateTenderRequest:
+    properties:
+      description:
+        type: string
+      name:
+        type: string
+    type: object
   models.Tender:
     description: Tender содержит информацию о тендере
     properties:
@@ -20,6 +27,8 @@ definitions:
         type: string
       status:
         $ref: '#/definitions/models.TenderStatus'
+      tender_version:
+        $ref: '#/definitions/models.TenderVersion'
       updated_at:
         type: string
       version:
@@ -36,6 +45,21 @@ definitions:
     - TenderCreated
     - TenderPublished
     - TenderClosed
+  models.TenderVersion:
+    properties:
+      created_at:
+        type: string
+      description:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      tender_id:
+        type: string
+      version:
+        type: integer
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -76,6 +100,94 @@ paths:
           schema:
             type: string
       summary: Получение списка тендеров
+      tags:
+      - Tenders
+  /api/tenders/{tenderId}/edit:
+    patch:
+      consumes:
+      - application/json
+      description: Обновляет параметры существующего тендера и возвращает обновленный
+        тендер
+      parameters:
+      - description: ID тендера
+        in: path
+        name: tenderId
+        required: true
+        type: string
+      - description: Тело запроса для обновления тендера
+        in: body
+        name: tender
+        required: true
+        schema:
+          $ref: '#/definitions/TenderHandlers.UpdateTenderRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Успешное обновление тендера
+          schema:
+            $ref: '#/definitions/models.Tender'
+        "400":
+          description: Неверный запрос
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Тендер не найден
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Ошибка сервера
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Обновление существующего тендера
+      tags:
+      - Tenders
+  /api/tenders/{tenderId}/rollback/{version}:
+    put:
+      description: Откатывает параметры тендера к указанной версии
+      parameters:
+      - description: ID тендера
+        in: path
+        name: tenderId
+        required: true
+        type: string
+      - description: Версия тендера
+        in: path
+        name: version
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Успешный откат тендера
+          schema:
+            $ref: '#/definitions/models.Tender'
+        "400":
+          description: Неверный запрос
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Тендер или версия не найдены
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Ошибка сервера
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Откат тендера
       tags:
       - Tenders
   /api/tenders/new:
